--- a/PlanningTime/Views/Shared/_Layout.cshtml
+++ b/PlanningTime/Views/Shared/_Layout.cshtml
@@ -1,35 +1,148 @@
-﻿<!DOCTYPE html>
+﻿@using PlanningTime.Models
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PlanningTime</title>
+    <title>@ViewData["Title"] - WattDoc</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/PlanningTime.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <style>
+        .logo {
+            max-height: 40px;
+            width: auto;
+        }
+
+        .menu-title {
+            color: #fff !important;
+            font-weight: bold;
+        }
+
+        .menu-link {
+            color: #fff !important;
+            font-weight: 500;
+            transition: 0.2s;
+        }
+
+            .menu-link:hover {
+                color: #ffd700 !important;
+            }
+
+        .user-indicator {
+            color: #fff;
+            font-weight: 500;
+            margin-left: 1rem;
+        }
+
+            .user-indicator i {
+                margin-right: 5px;
+            }
+
+        .navbar-nav .nav-item .btn-link {
+            color: #fff !important;
+            text-decoration: none;
+            padding: 0;
+            border: none;
+            background: none;
+        }
+
+            .navbar-nav .nav-item .btn-link:hover {
+                color: #ffd700 !important;
+            }
+    </style>
+
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PlanningTime</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <!-- Logo + Texte -->
+                <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/logo_wattvalue_83.png" alt="Logo" class="img-fluid logo" />
+                    <span class="fa fa-calendar" style="color:#fff"></span>
+                    <span class="menu-title ms-2">WattPlanning</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link menu-link" asp-area="" asp-controller="Home" asp-action="Index">Accueil</a>
+                        </li>
+                        <!--<li class="nav-item">
+                            <a class="nav-link menu-link" asp-area="" asp-controller="Home" asp-action="TableDictionary">Tables</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                            <a class="nav-link menu-link" asp-area="" asp-controller="Home" asp-action="SearchField">Champs</a>
+                        </li> -->
+
+                        @{
+                            var userId = HttpContextAccessor.HttpContext.Session.GetInt32("UserId");
+                            var userFullName = HttpContextAccessor.HttpContext.User.FindFirst("FullName")?.Value;
+                            var userRole = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value;
+                            var userImage = HttpContextAccessor.HttpContext.User.FindFirst("ImageUser")?.Value ?? "avatar.jpg";
+                        }
+
+                        @if (userId != null)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link menu-link" asp-controller="Events" asp-action="MyEvents">Mes Demandes</a>
+                            </li>
+                           
+                            <li class="nav-item">
+                                <a class="nav-link menu-link" asp-controller="Planning" asp-action="UsersPlanning">Planning Global</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link menu-link" asp-controller="Planning" asp-action="Index">Mon Planning</a>
+                            </li>
+
+                            @if (userRole == "Admin")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link menu-link" asp-controller="Admin" asp-action="Index">Gestion Demandes</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link menu-link" asp-controller="Users" asp-action="Index">Utilisateurs</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link menu-link" asp-controller="AdminEvents" asp-action="Index">Evénements</a>
+                                </li>
+                            }
+                        }
+                    </ul>
+
+                    <ul class="navbar-nav">
+                        @if (userId != null)
+                        {
+                            <li class="nav-item d-flex align-items-center">
+                                <img src="~/images/@userImage"
+                                     alt="@userFullName"
+                                     class="rounded-circle me-2"
+                                     style="width:40px; height:40px; object-fit:cover;" />
+                                <span class="user-indicator">@userFullName</span>
+                            </li>
+                            <li class="nav-item ms-3">
+                                <a class="nav-link menu-link" asp-controller="Account" asp-action="Logout">Déconnexion</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link menu-link" asp-controller="Account" asp-action="Login">Connexion</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -38,9 +151,10 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - PlanningTime - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Copy right WattDoc - <a href="https://www.wattvalue.fr/">Wattvalue</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
